# visual-assembly-canvas

./: .gitignore  Cargo.toml  IDEAS.md  README.md  a.out
machine/: .gitignore  Cargo.toml  IDEAS.md  bro
machine/machine_wasm/src/: lib.rs
machine/poom_macros/: Cargo.toml
machine/poom_macros/src/: lib.rs  with_arg.rs
machine/src/: lib.rs  main.rs  test_helper.rs
machine/src/audio/: midi.rs  mod.rs  synth.rs  waveform.rs  wavetable.rs
machine/src/binary/: compile.rs  mod.rs  run.rs
machine/src/blocks/: block.rs  clock.rs  memory.rs  midi_in.rs  midi_out.rs  mod.rs  osc.rs  pixel.rs  plotter.rs  synth.rs  tick.rs  value_view.rs
machine/src/canvas/: block.rs  block_ops.rs  canvas.rs  canvas_error.rs  error.rs  event.rs  execution.rs  message.rs  mod.rs  pixel.rs  routing.rs  send_message.rs  vec_helper.rs  virtual_io.rs  wire.rs  wiring.rs
machine/src/canvas/blocks/: block.rs  clock.rs  memory.rs  midi_in.rs  midi_out.rs  mod.rs  osc.rs  pixel.rs  plotter.rs  synth.rs  tick.rs
machine/src/cli/: actions.rs  args.rs  cli_error.rs  mod.rs
machine/src/machine/: actor.rs  decode.rs  error.rs  event.rs  execute.rs  handlers.rs  message.rs  mod.rs  runtime_error.rs  virtual_mem.rs
machine/src/mem/: memory.rs  mod.rs  segments.rs  stack.rs  string.rs
machine/src/op/: convert.rs  mod.rs
machine/src/orchestrator/: message.rs  mod.rs  packet.rs
machine/src/parser/: mod.rs  parse_error.rs  scanner.rs  symbols.rs  token.rs
machine/src/register/: mod.rs
machine/src/rewind/: diff.rs  mod.rs
machine/src/router/: mod.rs  router_error.rs  splits.rs  status.rs
machine/src/sequencer/: mod.rs  seq_error.rs  status.rs
machine/src/serialize/: mod.rs
machine/tests/: call_stack.rs  canvas.rs  comparison.rs  hello_world.rs  loop.rs  machine.rs  machine_communication.rs  math.rs  parser.rs  router.rs  sleep.rs  stack_ops.rs  strings.rs
machine/tests/asm/: bitpacking.asm  hello-world.asm
machine/wasm/: Cargo.toml
machine/wasm/src/: lib.rs
src/: lib.rs  (+1 more)
(+287 files in other folders)
