[package]
name = "machine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
snafu = "0.7.5"
strum = "0.25.0"
strum_macros = "0.25.2"
clap = { version = "4.4.6", features = ["derive"] }
wasm-bindgen = "0.2.87"

[dependencies.poom_macros]
path = "./poom_macros"

[dev-dependencies]
mockall = "0.11.4"
