[package]
name = "machine"
version = "0.1.0"
edition = "2021"
default-run = "machine_cli"

# command-line interface for the machine
[[bin]]
name = "machine_cli"
path = "src/main.rs"

[dependencies]
log = "0.4.20"
snafu = "0.7.5"
strum = "0.25.0"
strum_macros = "0.25.2"
clap = { version = "4.4.6", features = ["derive"] }

[dependencies.poom_macros]
path = "./poom_macros"

[dev-dependencies]
mockall = "0.11.4"

